# sphinx-autodoc-toolbox

./: .buildinfo  .gitignore  README.md  basic_usage.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: dependabot.yml  keylabeler.yml  release-drafter.yml
.github/workflows/: codeql.yml  pages.yml  publish-pypi.yml  pytest.yaml
_sources/: basic_usage.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: basic_usage.rst  conf.py  requirements.txt
docs/_examples/: example.py
sphinx_autodoc_toolbox/: autosummary_multiple_targets.py  collapse.py  mpython.py  pydomain_multiple_targets.py
sphinx_autodoc_toolbox/multiple_targets/: __init__.py  autosummary.py  pydomain.py
tests/: conftest.py
